--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -8,14 +8,23 @@ jobs:
           runs-on: ubuntu-latest
           steps:
           - name: Step one
-            uses: actions/checkout@v2
-          - name: Step two
-            run: env | sort
+            run: date
      job2:
           name: Second job
           runs-on: windows-latest
           steps:
           - name: Step one
-            uses: actions/checkout@v2
-          - name: Step two
-            run: "Get-ChildItem Env: | Sort-Object Name" 
+            run: Get-Date
+     job3:
+          name: Third job
+          runs-on: macos-latest
+          steps:
+          - name: Step one
+            run: "date -j -u -f "%m/%d/%y %H:%M:%S" +%s "08/08/20 20:20:00""
+     job4:
+          name: Fourth job
+          runs-on: ubuntu-latest
+          needs: [job1, job2, job3]
+          steps:
+          - name: Step one
+            run: date 
