--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,5 +1,6 @@
-name: first
-
+name: Create Artifact
+env: 
+     FILE_NAME: lesson-03-ch
 on: push
 
 jobs:
@@ -7,24 +8,10 @@ jobs:
           name: First job
           runs-on: ubuntu-latest
           steps:
-          - name: Step one
-            run: date
-     job2:
-          name: Second job
-          runs-on: windows-latest
-          steps:
-          - name: Step one
-            run: Get-Date
-     job3:
-          name: Third job
-          runs-on: macos-latest
-          steps:
-          - name: Step one
-            run: "date -j -u -f "%m/%d/%y %H:%M:%S" +%s "08/08/20 20:20:00""
-     job4:
-          name: Fourth job
-          runs-on: ubuntu-latest
-          needs: [job1, job2, job3]
-          steps:
-          - name: Step one
-            run: date 
+          - name: Checkout
+            uses: actions/checkout@v2
+          - name: Upload
+            uses: actions/upload-artifact@v1.0.0
+            with:
+               name: linux
+               path: ./${{ env.FILE_NAME }}
