--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -4,14 +4,24 @@ env:
 on: push
 
 jobs:
-     job1:
-          name: First job
+     test:
+          name: Test files
           runs-on: ubuntu-latest
           steps:
           - name: Checkout
             uses: actions/checkout@v1
-          - name: Upload
-            uses: actions/upload-artifact@v2
-            with:
-               name: ${{ env.FILE_NAME }}
-               path: .
+          - name: Run Script
+            run: python hello.py
+     build:
+               name: Build project
+               needs: test
+               runs-on: ubuntu-latest
+               steps:
+               - name: Checkout
+                 uses: actions/checkout@v1
+               - name: Create Artifact
+                 uses: actions/upload-artifact@v2
+                 with:
+                    name: ${{ env.FILE_NAME }}
+                    path: .
+
